# dydx-contracts

./: .gitmodules  Cargo.toml  README.md  example_messages.md  migration_guide.md
.cargo/: config.toml
lib/dydx/: Cargo.toml
lib/dydx/src/: lib.rs  msg.rs  proto_structs.rs
lib/integration/: Cargo.toml
lib/integration/src/: contract.rs  error.rs  lib.rs  msg.rs
src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
src/dydx/: mod.rs  msg.rs  proto_structs.rs  querier.rs  query.rs  route.rs  serializable_int.rs
src/execute/: admin.rs  deposit_withdraw.rs  helpers.rs  market_make.rs  mod.rs  order.rs
tests/: acl_tests.rs  admin_tests.rs  deposit_withdraw_basic.rs  market_make.rs  place_cancel.rs  test_deposit_withdraw.rs  test_market_make.rs  test_trader_access.rs  test_vault_admin.rs  trade_access_tests.rs  trader_access.rs  utils.rs  vault_admin.rs
