[workspace]
members = [
    "lib/*"
]
resolver = "2"

[workspace.dependencies]
cosmwasm-std = { version = "2.0.0", features = ["std", "cosmwasm_2_0"] }
cosmwasm-schema = { version = "2.0.0" }
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
schemars = "0.8.21"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.61"
