[package]
name = "elixir-dydx-integration"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "schema"
path = "src/bin/schema.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
# backtraces = ["cosmwasm-std/backtraces"] 

[dependencies]
cosmwasm-std = { version = "2.0.0", features = ["std", "cosmwasm_2_0"] }
cosmwasm-schema = { version = "2.0.0" }
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
schemars = "0.8.21"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_repr = "0.1.19"
thiserror = "1.0.61"

protobuf = { version = "=3.2.0", features = ["with-bytes"] }
num-bigint = "0.4"

[dev-dependencies]
cw-multi-test = "2.0.0"