[package]
name = "elixir-dydx-integration"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "schema"
path = "src/bin/schema.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
# backtraces = ["cosmwasm-std/backtraces"] 

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { version = "1.5.0" }
cosmwasm-schema = { version = "1.5.0" }
cw20-base = { version = "1.1.2", features = ["library"] }
cw-storage-plus = { version = "1.1.0" }
cw-utils = { version = "1.0.3" }
schemars = "0.8.21"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_repr = "0.1.19"
thiserror = "1.0.61"

protobuf = { version = "=3.2.0", features = ["with-bytes"] }
num-bigint = "0.4"
num-traits = "0.2.19"
strum = "0.26.2"
strum_macros = "0.26.4"

[dev-dependencies]
cw-multi-test = "1.2.0"
serde_json = "1.0.118"
